source/stylesheets/components/_partsgrid.scss
@use "responsive" as *;

.parts-grid {
  --columns: 6;
  display: grid;
  grid-template-columns: repeat(var(--columns), 1fr);
  gap: 1rem .5rem;

  &.two   { --columns: 2; }
  &.three { --columns: 3; }
  &.eight { --columns: 8; }
  &.square {
    gap: .5rem;
    button { aspect-ratio: 1 / 1; }
  }

  // Subgrid popover
  .parts-grid.square {
    position: absolute;
    left: 50%;
    top: 50%;
    translate: -50% -50%;
    padding: .666rem;
    width: calc(var(--columns) * 100% + (var(--columns) - 1) * .5rem + 1.333rem);
    background-color: var(--color-overlay);
    border-radius: var(--border-radius-2);
    box-shadow: 0 .333rem 2rem 0 rgba(0,0,0, .5);
    z-index: 60;
    transition: .2s ease opacity,
                .2s ease scale;

    &:not([open]) {
      opacity: 0;
      scale: .875;
      pointer-events: none; // redundant with inert but more supported.
    }
    &.left {
      left: 0;
      translate: -.666rem -50%;
    }
    &.right {
      left: 100%;
      translate: calc(-100% + .666rem) -50%;
    }
  }

  &:not(.square) button.highlight:not(.selected) {
    outline-offset: .018333rem;
  }

  button {
    position: relative;
    padding: 0;
    background-color: transparent;
    border-radius: var(--border-radius-1);
    aspect-ratio: 25 / 16;
    width: auto;
    height: auto;
    min-width: 0;
    transition: .1s ease background-color;

    img { width: 100%; }

    &.highlight {
      outline: .1666rem dashed var(--color-interactive-fg);
    }
    &.selected {
      background-color: white;
      outline: .1666rem solid white;
    }
  }

  hr {
    grid-column: 1 / span var(--columns);
    height: .25rem;
    background-color: transparent;
  }
}

@include hover-capable {
  .parts-grid button:not(.selected):hover {
    background-color: var(--color-interactive);
  }
}

